--- a/module_00/ex01/Makefile
+++ b/module_00/ex01/Makefile
@@ -2,7 +2,7 @@ NAME = phonebook
 
 CC = c++
 
-GFLAGS = -Wall -Wextra -Werror -std=c++98
+GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++98
 
 SRCDIR = src/
 OBJDIR = obj/
