--- a/module_06/ex00/Makefile
+++ b/module_06/ex00/Makefile
@@ -18,11 +18,11 @@ HEADERS = -I include
 all: $(NAME)
 
 $(NAME): $(SRCOBJ)
-	$(CC) -I include $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
+	$(CC) $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
 
 $(OBJDIR)%.o: $(SRCDIR)%.cpp
 	@mkdir -p ${OBJDIR}
-	$(CC) -I include -c $(GFLAGS) -o $@ $<
+	$(CC) $(HEADERS) -c $(GFLAGS) -o $@ $<
 
 tester: $(NAME)
 	python3 scaler_tester.py
