Handler includes correctly now

--- a/module_06/ex02/Makefile
+++ b/module_06/ex02/Makefile
@@ -22,7 +22,7 @@ $(NAME): $(SRCOBJ)
 
 $(OBJDIR)%.o: $(SRCDIR)%.cpp
 	@mkdir -p ${OBJDIR}
-	$(CC) HEADERS -c $(GFLAGS) -o $@ $<
+	$(CC) $(HEADERS) -c $(GFLAGS) -o $@ $<
 
 clean:
 	@rm -rf $(OBJDIR)
