--- a/module_07/ex00/Makefile
+++ b/module_07/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME = identify
+NAME = opperators
 
 CC = c++
 
@@ -7,22 +7,22 @@ GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++11
 SRCDIR = src/
 OBJDIR = obj/
 
-SRCFILES = A.cpp Base.cpp B.cpp C.cpp main.cpp Tester.cpp
+SRCFILES = main.cpp
 
 SRCOBJ = $(SRCFILES:%.cpp=$(OBJDIR)%.o)
+DEPS = $(SRCOBJ:.o=.d)
 
 HEADERS = -I include
 
-.PHONY: all clean fclean re
 
 all: $(NAME)
 
 $(NAME): $(SRCOBJ)
-	$(CC) -I include $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
+	$(CC) $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
 
 $(OBJDIR)%.o: $(SRCDIR)%.cpp
 	@mkdir -p ${OBJDIR}
-	$(CC) -I include -c $(GFLAGS) -o $@ $<
+	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
 
 clean:
 	@rm -rf $(OBJDIR)
@@ -31,3 +31,6 @@ fclean: clean
 	@rm -f $(NAME)
 
 re: fclean all
+
+-include $(DEPS)
+.PHONY: all clean fclean re
