--- a/module_07/ex01/Makefile
+++ b/module_07/ex01/Makefile
@@ -1,15 +1,20 @@
 NAME = iter
+TESTNAME = test
+BUILD_MODE = build
 
 CC = c++
 
-GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++11
+GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++11 -g3
 
 SRCDIR = src/
+TESTDIR = tester/src/
 OBJDIR = obj/
 
 SRCFILES = main.cpp
+TESTFILES = $(NAME)_test.cpp test_iter.cpp
 
 SRCOBJ = $(SRCFILES:%.cpp=$(OBJDIR)%.o)
+TESTOBJ = $(TESTFILES:%.cpp=$(OBJDIR)%.o)
 DEPS = $(SRCOBJ:.o=.d)
 
 HEADERS = -I include
@@ -21,6 +26,25 @@ $(NAME): $(SRCOBJ)
 	$(CC) $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
 
 $(OBJDIR)%.o: $(SRCDIR)%.cpp
+	@if [ "$(BUILD_MODE)" = "build" ]; then \
+		if [ "$<" = "$(SRCDIR)main.cpp" ]; then \
+			./tester/swap_test.sh build; \
+		fi \
+	fi
+
+	@mkdir -p ${OBJDIR}
+	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
+
+test: BUILD_MODE = test
+$(TESTNAME): clean $(TESTOBJ) $(SRCOBJ)
+	$(CC) $(GFLAGS) -MMD -MP $(SRCOBJ) $(TESTOBJ) $(HEADERS) -I tester/include -o $(TESTNAME)
+	@rm -rf $(OBJDIR)
+
+$(OBJDIR)%.o: $(TESTDIR)%.cpp
+	@if [ "$<" = "$(TESTDIR)$(NAME)_test.cpp" ]; then \
+		./tester/swap_test.sh test; \
+	fi
+
 	@mkdir -p ${OBJDIR}
 	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
 
@@ -29,9 +53,10 @@ clean:
 
 fclean: clean
 	@rm -f $(NAME)
+	@rm -f $(TESTNAME)
 
 re: fclean all
 
 -include $(DEPS)
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re test
 
