--- a/module_08/ex01/Makefile
+++ b/module_08/ex01/Makefile
@@ -1,4 +1,6 @@
 NAME = span
+TESTNAME = test
+BUILD_MODE = build
 
 CC = c++
 
@@ -9,11 +11,14 @@ TESTDIR = tester/src/
 OBJDIR = obj/
 
 SRCFILES = main.cpp Span.cpp
+TESTFILES = $(NAME)_test.cpp
 
 SRCOBJ = $(SRCFILES:%.cpp=$(OBJDIR)%.o)
+TESTOBJ = $(TESTFILES:%.cpp=$(OBJDIR)%.o)
 DEPS = $(SRCOBJ:.o=.d)
 
 HEADERS = -I include
+
 
 all: $(NAME)
 
@@ -21,6 +26,26 @@ $(NAME): $(SRCOBJ)
 	$(CC) $(GFLAGS) $(SRCOBJ) $(HEADERS) -o $(NAME)
 
 $(OBJDIR)%.o: $(SRCDIR)%.cpp
+	@if [ "$(BUILD_MODE)" = "build" ]; then \
+		if [ "$<" = "$(SRCDIR)main.cpp" ]; then \
+			./tester/swap_test.sh build; \
+		fi \
+	fi
+
+	@mkdir -p ${OBJDIR}
+	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
+
+test: BUILD_MODE = test
+$(TESTNAME): clean $(TESTOBJ) $(SRCOBJ)
+	$(CC) $(GFLAGS) -MMD -MP $(SRCOBJ) $(TESTOBJ) $(HEADERS) -I tester/include -o $(TESTNAME)
+	@rm -rf $(OBJDIR)
+	$(MAKE) -C tester/extern run
+
+$(OBJDIR)%.o: $(TESTDIR)%.cpp
+	@if [ "$<" = "$(TESTDIR)$(NAME)_test.cpp" ]; then \
+		./tester/swap_test.sh test; \
+	fi
+
 	@mkdir -p ${OBJDIR}
 	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
 
@@ -34,4 +59,4 @@ fclean: clean
 re: fclean all
 
 -include $(DEPS)
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re test
