--- a/module_08/ex00/Makefile
+++ b/module_08/ex00/Makefile
@@ -4,14 +4,14 @@ BUILD_MODE = build
 
 CC = c++
 
-GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++11 -g3
+GFLAGS = -Wall -Wextra -Werror -Wshadow -Wpedantic -std=c++11
 
 SRCDIR = src/
 TESTDIR = tester/src/
 OBJDIR = obj/
 
 SRCFILES = main.cpp
-TESTFILES = $(NAME)_test.cpp
+TESTFILES = easyfind_test.cpp
 
 SRCOBJ = $(SRCFILES:%.cpp=$(OBJDIR)%.o)
 TESTOBJ = $(TESTFILES:%.cpp=$(OBJDIR)%.o)
@@ -19,6 +19,11 @@ DEPS = $(SRCOBJ:.o=.d)
 
 HEADERS = -I include
 
+ifeq ($(OS),Windows_NT)
+    CLEAR_COMMAND = cls
+else
+    CLEAR_COMMAND = clear
+endif
 
 all: $(NAME)
 
@@ -33,13 +38,17 @@ $(OBJDIR)%.o: $(SRCDIR)%.cpp
 	fi
 
 	@mkdir -p ${OBJDIR}
-	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
+	$(CC) $(GFLAGS) $(HEADERS) -MMD -MP -c -o $@ $<
+
+run: all
+	./$(NAME)
 
 test: BUILD_MODE = test
 $(TESTNAME): clean $(TESTOBJ) $(SRCOBJ)
-	$(CC) $(GFLAGS) -MMD -MP $(SRCOBJ) $(TESTOBJ) $(HEADERS) -I tester/include -o $(TESTNAME)
+	$(CC) $(GFLAGS) -MMD -MP $(SRCOBJ) $(TESTOBJ) $(HEADERS) -g3 -I tester/include -o $(TESTNAME)
 	@rm -rf $(OBJDIR)
-	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./test
+	@$(CLEAR_COMMAND)
+	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --track-origins=yes --read-var-info=yes --track-fds=yes --trace-children=yes ./$(TESTNAME)
 
 $(OBJDIR)%.o: $(TESTDIR)%.cpp
 	@if [ "$<" = "$(TESTDIR)$(NAME)_test.cpp" ]; then \
@@ -47,16 +56,21 @@ $(OBJDIR)%.o: $(TESTDIR)%.cpp
 	fi
 
 	@mkdir -p ${OBJDIR}
-	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -o $@ $<
+	$(CC) $(HEADERS) -MMD -MP -c $(GFLAGS) -g3 -I tester/include -o $@ $<
 
 clean:
 	@rm -rf $(OBJDIR)
 
 fclean: clean
+	@./tester/swap_test.sh build;
 	@rm -f $(NAME)
 	@rm -f $(TESTNAME)
 
 re: fclean all
 
+fmt:
+	@echo "Format code"
+	@find . -type f -name "*.*pp" -print0 | xargs -0 clang-format -i
+
 -include $(DEPS)
-.PHONY: all clean fclean re test
+.PHONY: all clean fclean re test fmt
