--- a/module_09/ex01/Makefile
+++ b/module_09/ex01/Makefile
@@ -42,6 +42,7 @@ test: all
 		cd tester; \
 		python3 -m venv .venv; \
 		source .venv/bin/activate; \
+		pip install --upgrade pip; \
 		pip install -r requirements.txt; \
 		deactivate; \
 		cd ..; \
